# cashTracker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.30b4dc2  GLOBALS.cpp  GLOBALS.h  HomeForm.qml  HomeForm.ui.qml  Income.qml  Income.ui.qml  Outgoings.qml  Outgoings.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  PageBackground.qml  appregister.cpp  appregister.h  balance.cpp  balance.h  balancechange.cpp  balancechange.h  logger.cpp  logger.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  operation.cpp  operation.h  operationwindow.cpp  operationwindow.h  operationwindow.ui  qml.qrc  qtquickcontrols2.conf  removeoperationwindow.cpp  removeoperationwindow.h  removeoperationwindow.ui
tests/: balanceChangeTests.h  operationTests.h  unittests.h
